2006-05-23  Aidan Kehoe  <kehoea@parhasard.net>

	* frame-x.c (x_set_frame_properties):
	Check that the frame is live and that the device is not being
	deleted before attempting anything.  Avoids calling X code if
	x_IO_error_handler has seen a broken pipe. 
	
2006-05-22  Aidan Kehoe  <kehoea@parhasard.net>

	* file-coding.c (output_bytes_in_ascii_and_hex):
	Pass stderr_out internally-formatted data, don't use an external
	format. 

2006-05-21  Aidan Kehoe  <kehoea@parhasard.net>

	* doc.c (extract_object_file_name):
	* doc.c (unparesseuxify_doc_string):
	Leave sufficient space for the '\0' sentinel when reading into the
	buffer.  The bug in unparesseuxify_doc_string had been there for
	ten years at least, but it was Fabrice Popineau's investigation of
	the code on the same model in extract_object_file_name that
	provoked its discovery.  Thank you Fabrice!
	
2006-05-16  Stephen J. Turnbull  <stephen@xemacs.org>

	* XEmacs 21.5.27 "fiddleheads" is released.

2006-02-27  Joachim Schrod  <jschrod@acm.org>

	* mule-coding.c (iso2022_detect): Handle Latin-1 encoded files
	that have several high-byte chars in a row.

2006-05-08  Jerry James  <james@xemacs.org>

	* number.c (Fcanonicalize_number): Use EMACS_INT instead of int,
	which fixes bignum arithmetic on 64-bit platforms.
	* number.h (bignum_fits_emacs_int_p): New macro.
	* number.h (bignum_to_emacs_int): New macro.

2006-03-30  Stephen J. Turnbull  <stephen@xemacs.org>

	* objects-x.c (x_initialize_font_instance):
	Ensure that duplicative X font gets freed if we have an Xft font.
	Remove some redundant debug output.
	Comment on frequency of calls to this function.

2006-05-08  Stephen J. Turnbull  <stephen@xemacs.org>

	* EmacsShell-sub.c (RootGeometryManager):
	Change garbage to useful messages under DEBUG_GEOMETRY_MANAGEMENT.
	Based on a suggestion by Francois L'Archeveque.

2006-05-02  Stephen J. Turnbull  <stephen@xemacs.org>

	* doc.c (extract_object_file_name): Fix buffer overrun.
